# Connect-4-AI

./: .gitignore  CMakeLists.txt  README.md  results.md
include/agent/: agent.hpp
include/connect4/: agent.hpp  board_state.hpp  board_utils.hpp  game.hpp  heuristics.hpp
src/: main.cpp
src/agent/: agent.cpp
src/board/: board_state.cpp  board_utils.cpp
src/game/: gui.cpp  tui.cpp
src/heuristics/: heuristics.cpp
